2008-11-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-app.c: initialise variable before use, from Laszlo.
	Fixes: NB#92638

2008-11-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_dump_debug_info(): print more information about
	  client windows.

2008-11-26  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c:
	Added more names to actors for debugging
	* src/mb/hd-comp-mgr.c:
	Fixed bug where tapping on the background would cause the screen
	to suddenly blur and fade back in

2008-11-26  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-finger-scroll.c:
	Changed code for dragging so that position updates immediately
	* src/tidy/tidy-blur-group.c:
	Modified blur group to use new clutter's 'notify-modified' so
	that it now updates if something that is blurred changes.

2008-11-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        Move and redraw title when status area changes size or appears or
	disappears.

	* src/home/hd-home.c:

2008-11-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.7

2008-11-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.h
	* src/mb/hd-comp-mgr.c:
	  Added a @tag parameter to hd_comp_mgr_dump_debug_info() to identify
	  the debug dump as a whole.
	  Include the wm client stack in the debug dump.
	  Add the client's XWindow number for actors.
	* src/main.c
	* src/home/hd-task-navigator.c:
	  More clutter_actor_set_name()s.

2008-11-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  dump_clutter_actor_tree(): if the actor to dump is a ClutterLabel
	  and it doesn't have a name otherwise print the label text as name.
	* src/home/hd-home.c
	* src/home/hd-task-navigator.c:
	  Added more explicit clutter_actor_set_name()s to make debugging
	  easier.

2008-11-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c: