@@ -1,3 +1,9 @@
+2008-11-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/mb/hd-comp-mgr.c, src/home/hd-home.c,
+	src/home/hd-task-navigator.c: Shorten animation durations for the
+	managers.
+
 2008-11-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	* src/mb/hd-app.c: initialise variable before use, from Laszlo.
